Fixed logging, added logging aspect, fixed contact api, fixed saving of pool id in schedule